December 9 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* README updated again

December 9 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* README updated

December 9 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Corrected fatal mistake in Makefile.am (thank Valpurus that I caught this before we release)
	* Adjusted color of flaming sword.
	* Added BoolQuestion confirmation for appling wands.
	* License changed to GPL.
	
December 9 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Fixed the Foul Iron Penetrating Light of Death Bug
	* Added "Please send bug report..." message to aborts
	* Wands that have run out of charges are now worth nothing
	* Corrected probably all gcc warnings
	* Corrected a bug in innermost SpillFluid() function that caused fluid to
	  appear on the ground with a slight delay
	* Panicked monsters are now much better in escaping along long tunnels
	* Dipping wielded items is now possible
	* Corrected a typo in potions' break message
	* Zombie flesh is now initially spoiled
	* Pick-axes are now more sturdy
	* Digging consumes henceforth more NP
	* Floating eye picture added to char.pcx by Kahvi
	* I had to decrease the ambient light of New Attnam, since otherwise lanterns
	  would not have been visible there, which certainly would have looked like a bug

December 9 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Cloak and ring of invisibility can no more be wished, since they were so
	  much more powerful than any other wishable items
	* Charisma now affects shop prices (both buying and selling)
	* Dealing with shopkeepers now trains charisma
	* Drinking ommel urine is now eeevil
	* Go command is now disabled if confuse state is active
	* Reading when confused is no longer very buggy and abusable
	* Stethoscope info is now somewhat more useful
	* Since killing the enner beast is so difficult, I added a horn of fear to its
	  inventory as a reward for the trouble
	* Petrus and priests can now cure poison