@@ -477,8 +477,8 @@ bool game::BoolQuestion(const std::string& String, int DefaultAnswer, int OtherK
   else if(DefaultAnswer != REQUIRES_ANSWER)
     ABORT("Illegal BoolQuestion DefaultAnswer send!");
   
-  int FromKeyQuestion = KeyQuestion(String, DefaultAnswer, 6, 'y', 'Y', KEY_ENTER, 'n', 'N', OtherKeyForTrue);
-  return FromKeyQuestion == KEY_ENTER || FromKeyQuestion == 'y' || FromKeyQuestion == 'Y' || FromKeyQuestion == OtherKeyForTrue;
+  int FromKeyQuestion = KeyQuestion(String, DefaultAnswer, 6, 'y', 'Y, 'n', 'N', OtherKeyForTrue);
+  return FromKeyQuestion == 'y' || FromKeyQuestion == 'Y' || FromKeyQuestion == OtherKeyForTrue;
 }
 
 void game::DrawEverything()
